# procrustes

./: .gitignore  BUILDME.rst  Cargo.toml  Dockerfile  README.md  README.rst
src/: main.rs  spinner.rs  test_main.rs
