[package]
name = "prs"
version = "1.0.2"
authors = ["Tyrn <a@b.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.8.0"
unicode-segmentation = "1.3.0"
alphanumeric-sort = "1.0.11"
clap = "~2.33"
walkdir = "2"
taglib = "*"
