[package]
name = "procrustes"
version = "1.0.3"
authors = ["Tyrn <a@b.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.10.3"
unicode-segmentation = "1.8.0"
alphanumeric-sort = "1.4.3"
clap = "~2.34"
taglib = "*"
glob = "0.3.0"
spinner = "0.5.0"
spinners = "2.0.0"
terminal-spinners = "0.3.2"